# ViewImage3

./: CMakeLists.txt  README.md
src/: IncludeSFML.h  debugging.h  main.cpp
src/MainWindow/: MainWindow.cpp  MainWindow.h  TestElement.cpp  TestElement.h
src/MainWindow/windows_exclusive/: titlebar.h
src/UIManager/: UIManager.cpp  UIManager.h
src/UserInterface/: uilist.h
src/UserInterface/TestElement/: TestElement.cpp  TestElement.h
src/UserInterface/UIManager/: Coordinates.cpp  UIManager.cpp  UIManager.h
src/dialog/: sfdialog.cpp  sfdialog.h
src/ops/: coordinate.h
